--- a/public/style-menu.css
+++ b/public/style-menu.css
@@ -180,7 +180,7 @@ footer {
 }
 
 .titre h1 {
-  font-family: 'Shrikhand', impact, serif;
+  font-family: "Shrikhand", cursive;
   font-size: 25px;
   margin-left: 30px;
 }
@@ -236,17 +236,6 @@ footer {
   color: #727171;
 }
 
-h4 {
-  font-size: 16px;
-  font-weight: 800;
-  width: 100%;
-  margin-top: 10px;
-  color: black;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-}
-
 .blocmenu {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -258,6 +247,7 @@ h4 {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  width: 95%;
   height: 250px;
   margin-top: 20px;
 }
@@ -313,18 +303,34 @@ h4 {
   display: flex;
   background-color: white;
   border-radius: 20px;
-  -webkit-box-orient: horizontal;
+  -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  width: 90%;
+  width: 95%;
   height: 60px;
   -ms-flex-pack: distribute;
       justify-content: space-around;
   padding-left: 10px;
   margin-left: 20px;
+}
+
+.totaldescription {
+  width: 100%;
+  height: 100%;
+}
+
+h4 {
+  font-size: 16px;
+  font-weight: 800;
+  width: 100%;
+  margin-top: 10px;
+  color: black;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .descriptiontarif {
@@ -340,21 +346,24 @@ h4 {
           justify-content: space-between;
   font-size: 14px;
   width: 100%;
-  height: 35px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .description_menu {
   color: #727171;
-  white-space: nowrap;
-  width: 100%;
-  height: 100%;
   overflow: hidden;
   text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .tarif {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   font-weight: 800;
-  margin-right: 8px;
+  margin-right: 15px;
   color: black;
 }
 
@@ -375,7 +384,7 @@ h4 {
 .menu:hover .valide {
   color: white;
   background-color: #99E2D0;
-  width: 60px;
+  width: 50px;
   height: 60px;
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -384,11 +393,9 @@ h4 {
       -ms-flex-pack: center;
           justify-content: center;
   padding: 4px;
-  margin-top: -31.5px;
-  margin-left: 5px;
   border-radius: 0 20px 20px 0;
-  -webkit-transform: translateX(0, 0);
-          transform: translateX(0, 0);
+  -webkit-transform: translate(-50px, 0);
+          transform: translate(-50px, 0);
 }
 
 .menu:hover .valide i {
@@ -403,6 +410,11 @@ h4 {
           transform: rotate(1turn);
   -webkit-transition: 500ms;
   transition: 500ms;
+}
+
+.menu:hover .tarif {
+  -webkit-transform: translate(0);
+          transform: translate(0);
 }
 
 .bouton {
