--- a/sass/pages/_accueil.scss
+++ b/sass/pages/_accueil.scss
@@ -102,7 +102,7 @@ main
 		{
 			display: flex;
 			flex-direction: column;
-			justify-content: space-around;
+			justify-content: space-between;
 			width: 100%;
 			height: 250px;
 		}
@@ -117,14 +117,14 @@ main
 	{
 		display: flex;
 		flex-direction: row;
-		justify-content: space-between;
+		justify-content: center;
 		align-items: center;
 		border-radius: 25px;
 		margin-top: -20px;
-		margin-left: 35px;
+		margin-left: 30px;
 		font-size: 16px;
 		font-weight: 900;
-		height: 60px;
+		height: 70px;
 		width: 88%;
 		box-shadow: ($texte +110%) 0px 6px 15px;
 		background: $cadre;
@@ -144,20 +144,21 @@ main
 			border-radius: 50%;
 			background-color: $primaire;
 			color: white;
-			font-size: 12px;
-			width: 25px;
-			height: 25px;
-			margin-left: -15px;
+			font-size: 15px;
+			width: 35px;
+			height: 28px;
+			margin-left: -13px;
 		}
 		.choix i
 		{
+			margin-left: 20px;
+			margin-right: 20px;
 			color: $texte +50%;
-			font-size: 18px;
-			margin-left: 5px;
+			font-size: 20px;
 		}
 		.choix h4
 		{
-			margin-right: 70px;
+			margin-bottom: 10px;
 		}
 		.choix:hover i 
 		{
