--- a/sass/style.css
+++ b/sass/style.css
@@ -715,8 +715,9 @@ h1 + p {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   width: 100%;
   height: 250px;
 }
@@ -738,18 +739,18 @@ h2 {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   border-radius: 25px;
   margin-top: -20px;
-  margin-left: 35px;
+  margin-left: 30px;
   font-size: 16px;
   font-weight: 900;
-  height: 60px;
+  height: 70px;
   width: 88%;
   -webkit-box-shadow: #e0dfdf 0px 6px 15px;
           box-shadow: #e0dfdf 0px 6px 15px;
@@ -778,20 +779,21 @@ h2 {
   border-radius: 50%;
   background-color: #9356DC;
   color: white;
-  font-size: 12px;
-  width: 25px;
-  height: 25px;
-  margin-left: -15px;
+  font-size: 15px;
+  width: 35px;
+  height: 28px;
+  margin-left: -13px;
 }
 
 .choix i {
+  margin-left: 20px;
+  margin-right: 20px;
   color: #a4a3a3;
-  font-size: 18px;
-  margin-left: 5px;
+  font-size: 20px;
 }
 
 .choix h4 {
-  margin-right: 70px;
+  margin-bottom: 10px;
 }
 
 .choix:hover i {
