modif police et check

--- a/public/style-menu.css
+++ b/public/style-menu.css
@@ -194,19 +194,24 @@ footer {
 
 .coeurvide {
   color: #727171;
+  opacity: 1;
 }
 
 .coeurrempli {
   opacity: 0;
 }
 
-.coeurrempli:hover {
+.coeur:hover .coeurrempli {
   opacity: 1;
   background: -webkit-gradient(linear, left bottom, left top, from(#FF79DA), to(#9356DC));
   background: linear-gradient(0deg, #FF79DA, #9356DC);
   background-clip: text;
   -webkit-background-clip: text;
   color: transparent;
+}
+
+.coeur:hover .coeurvide {
+  opacity: 0;
 }
 
 .detailmenu {
@@ -371,9 +376,10 @@ h4 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  width: auto;
   color: transparent;
-  -webkit-transform: rotate(0turn);
-          transform: rotate(0turn);
+  -webkit-transform: rotate(0turn) translate(0px);
+          transform: rotate(0turn) translate(0px);
 }
 
 .menu:hover {
@@ -394,8 +400,8 @@ h4 {
           justify-content: center;
   padding: 4px;
   border-radius: 0 20px 20px 0;
-  -webkit-transform: translate(-50px, 0);
-          transform: translate(-50px, 0);
+  -webkit-transform: translate(-49px, 0);
+          transform: translate(-49px, 0);
 }
 
 .menu:hover .valide i {
@@ -408,13 +414,12 @@ h4 {
           justify-content: center;
   -webkit-transform: rotate(1turn);
           transform: rotate(1turn);
-  -webkit-transition: 500ms;
-  transition: 500ms;
+  -webkit-transition: 1000ms;
+  transition: 1000ms;
 }
 
 .menu:hover .tarif {
-  -webkit-transform: translate(0);
-          transform: translate(0);
+  margin-right: 60px;
 }
 
 .bouton {
@@ -507,6 +512,7 @@ h4 {
   }
   .coeur i {
     font-size: 30px;
+    padding: 2px;
   }
   .menu {
     height: 70px;
@@ -559,15 +565,17 @@ h4 {
   .tarif {
     font-size: 20px;
     margin-right: 20px;
-    margin-top: -15px;
   }
   .menu:hover .valide {
     height: 70px;
-    margin-top: -36.5px;
   }
   .bouton button {
     width: 300px;
+    font-size: 20px;
     margin-top: 50px;
+  }
+  .bouton a button {
+    font-size: 20px;
   }
 }
 /*# sourceMappingURL=style-menu.css.map */
