--- a/sass/layouts/_menu.scss
+++ b/sass/layouts/_menu.scss
@@ -186,7 +186,7 @@
     .valide
     {
         display: flex;
-        width: 100%;
+        width: auto;
         color: transparent;
         transform: rotate(0turn) translate(0px);
         
