--- a/public/style.css
+++ b/public/style.css
@@ -194,19 +194,24 @@ footer {
 
 .coeurvide {
   color: #727171;
+  opacity: 1;
 }
 
 .coeurrempli {
   opacity: 0;
 }
 
-.coeurrempli:hover {
+.coeur:hover .coeurrempli {
   opacity: 1;
   background: -webkit-gradient(linear, left bottom, left top, from(#FF79DA), to(#9356DC));
   background: linear-gradient(0deg, #FF79DA, #9356DC);
   background-clip: text;
   -webkit-background-clip: text;
   color: transparent;
+}
+
+.coeur:hover .coeurvide {
+  opacity: 0;
 }
 
 .detailmenu {
@@ -371,9 +376,10 @@ h4 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  width: auto;
   color: transparent;
-  -webkit-transform: rotate(0turn);
-          transform: rotate(0turn);
+  -webkit-transform: rotate(0turn) translate(0px);
+          transform: rotate(0turn) translate(0px);
 }
 
 .menu:hover {
@@ -394,8 +400,8 @@ h4 {
           justify-content: center;
   padding: 4px;
   border-radius: 0 20px 20px 0;
-  -webkit-transform: translate(-50px, 0);
-          transform: translate(-50px, 0);
+  -webkit-transform: translate(-49px, 0);
+          transform: translate(-49px, 0);
 }
 
 .menu:hover .valide i {
@@ -408,13 +414,12 @@ h4 {
           justify-content: center;
   -webkit-transform: rotate(1turn);
           transform: rotate(1turn);
-  -webkit-transition: 500ms;
-  transition: 500ms;
+  -webkit-transition: 1000ms;
+  transition: 1000ms;
 }
 
 .menu:hover .tarif {
-  -webkit-transform: translate(0);
-          transform: translate(0);
+  margin-right: 60px;
 }
 
 .bouton {
@@ -507,6 +512,7 @@ h4 {
   }
   .coeur i {
     font-size: 30px;
+    padding: 2px;
   }
   .menu {
     height: 70px;
@@ -559,15 +565,17 @@ h4 {
   .tarif {
     font-size: 20px;
     margin-right: 20px;
-    margin-top: -15px;
   }
   .menu:hover .valide {
     height: 70px;
-    margin-top: -36.5px;
   }
   .bouton button {
     width: 300px;
+    font-size: 20px;
     margin-top: 50px;
+  }
+  .bouton a button {
+    font-size: 20px;
   }
 }
 
@@ -710,7 +718,6 @@ h1 + p {
   margin-bottom: 10px;
   -ms-flex-pack: distribute;
       justify-content: space-around;
-  border: red solid;
 }
 
 .fonctionnement_bouton {
@@ -721,8 +728,9 @@ h1 + p {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   width: 100%;
   height: 250px;
 }
@@ -744,18 +752,18 @@ h2 {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   border-radius: 25px;
   margin-top: -20px;
-  margin-left: 35px;
+  margin-left: 30px;
   font-size: 16px;
   font-weight: 900;
-  height: 60px;
+  height: 70px;
   width: 88%;
   -webkit-box-shadow: #e0dfdf 0px 6px 15px;
           box-shadow: #e0dfdf 0px 6px 15px;
@@ -784,20 +792,21 @@ h2 {
   border-radius: 50%;
   background-color: #9356DC;
   color: white;
-  font-size: 12px;
-  width: 25px;
-  height: 25px;
-  margin-left: -15px;
+  font-size: 15px;
+  width: 35px;
+  height: 28px;
+  margin-left: -13px;
 }
 
 .choix i {
+  margin-left: 20px;
+  margin-right: 20px;
   color: #a4a3a3;
-  font-size: 18px;
-  margin-left: 5px;
+  font-size: 20px;
 }
 
 .choix h4 {
-  margin-right: 70px;
+  margin-bottom: 10px;
 }
 
 .choix:hover i {
@@ -925,13 +934,17 @@ aside {
   opacity: 0;
 }
 
-.coeurrempli:hover {
+.coeur:hover .coeurrempli {
   opacity: 1;
   background: -webkit-gradient(linear, left bottom, left top, from(#FF79DA), to(#9356DC));
   background: linear-gradient(0deg, #FF79DA, #9356DC);
   background-clip: text;
   -webkit-background-clip: text;
   color: transparent;
+}
+
+.coeur:hover .coeurvide {
+  opacity: 0;
 }
 
 h3 {
@@ -1193,8 +1206,7 @@ h3 {
 
 @media screen and (min-width: 768px) and (max-width: 1293px) {
   .loader {
-    margin-top: 30%;
-    margin-left: 45%;
+    margin-left: 35%;
     width: 200px;
     height: 200px;
     font-size: 25px;
