--- a/sass/pages/_accueil.scss
+++ b/sass/pages/_accueil.scss
@@ -65,6 +65,7 @@ main
 			margin-left: 40px;
 			margin-right: 40px;
 			font-size: 25px;
+			font-family: "Roboto", cursive;
 		}
 		h1+p
 		{
@@ -112,6 +113,7 @@ main
 			width: 100%;
 			font-size: 25px;
 			margin-left: 25px;
+			font-family: "Roboto", cursive;
 		}
 	.choix
 	{
